<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DonationActivity" >

    <TextView
        android:id="@+id/tv_description_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_donation_description"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tv_title_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/txt_donation_link" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingRight="20sp" >

        <TextView
            android:id="@+id/tv_text1_donation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_donation_text1"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_donation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_send_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onBuyPressed"
        android:text="@string/bt_send_donation" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_logo_donation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/txt_description_image"
            android:src="@drawable/img_logo_paypal" />

    </LinearLayout>

</LinearLayout>