<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anpa_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_detail_lost_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/txt_add_lost"
        android:textColor="@color/red"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="3" >

        <TextView
            android:id="@+id/txt_subtitle_nom_mascota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/txt_subtitle_nom_mascota"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/editxt_nom_mascota"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="3" >

        <TextView
            android:id="@+id/txt_subtitle_raza_mascota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/txt_subtitle_raza_mascota"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/editxt_raza_mascota"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="3" >

        <TextView
            android:id="@+id/txt_subtitle_contacto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/txt_subtitle_contacto"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/editxt_contacto"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="3" >

        <TextView
            android:id="@+id/txt_subtitle_telefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/txt_subtitle_telefono"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/editxt_telefono"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="3" >

        <TextView
            android:id="@+id/txt_subtitle_detalle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/txt_subtitle_detalle"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/editxt_detail_lost_description"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>
    
    
    <Button
        android:id="@+id/btn_add_lost_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/red"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_add_lost_photo"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="3" >

        <TextView
            android:id="@+id/txt_subtitle_short_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/txt_subtitle_short_direction"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/editxt_short_direction"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="3" >

        <TextView
            android:id="@+id/txt_subtitle_short_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/txt_subtitle_short_direction"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/editxt_short_direction"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="3" >

        <TextView
            android:id="@+id/txt_subtitle_short_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/txt_subtitle_short_direction"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/editxt_short_direction"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>
    

    


</LinearLayout>