<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/anpa_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_detail_lost_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/txt_detail_lost_title" />

    <ImageView
        android:id="@+id/img_detail_lost"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/img_no_image" />    

    <TextView
        android:id="@+id/txt_detail_lost_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_gravity="right"
        android:padding="8dp"
        android:textSize="10sp"/>
    
    <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="3" >

    			<TextView
                    android:id="@+id/txt_subtitle_nom_mascota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/txt_subtitle_nom_mascota"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/txt_nom_mascota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:textColor="@color/black" />
    
     </LinearLayout>
     
     <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="3" >

    			<TextView
                    android:id="@+id/txt_subtitle_raza_mascota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/txt_subtitle_raza_mascota"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/txt_raza_mascota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:textColor="@color/black" />
    
     </LinearLayout>
    
     <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="3" >

    			<TextView
                    android:id="@+id/txt_subtitle_contacto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/txt_subtitle_contacto"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/txt_contacto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:textColor="@color/black" />
    
     </LinearLayout>
     
     <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="3" >

    			<TextView
                    android:id="@+id/txt_subtitle_telefono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/txt_subtitle_telefono"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/txt_telefono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:textColor="@color/black" />
    
     </LinearLayout>
     
     <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="3" >

    			<TextView
                    android:id="@+id/txt_subtitle_short_direction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/txt_subtitle_short_direction"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/txt_short_direction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:textColor="@color/black" />
    
     </LinearLayout>
     
     <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="3" >

    			<TextView
                    android:id="@+id/txt_subtitle_detalle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/txt_subtitle_detalle"
                    android:textColor="@color/red" />

		        <TextView
			        android:id="@+id/txt_detail_lost_description"
			        android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
			        android:text="TextView"
			        android:inputType="textMultiLine"/>
    
     </LinearLayout>     
 
</LinearLayout>
